--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <title>Run Buddy</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <meta title="author" name="Min Maung">
 </head>
 
 <body> 
   <!-- navigation -->
   <header>
-    <div class="header">
       <h1>
         <a href="/">RUN BUDDY</a>
       </h1>
@@ -23,7 +22,6 @@
           <li><a href="#Reach Out">Reach Out</a></li>
         </ul>
       </nav>
-    </div>
   </header>
 
   <!-- hero/jumbotron -->
@@ -52,13 +50,11 @@
 
   <!-- footer -->
   <footer>
-    <div class="footer">
       <h2>❤️ Made with love by Run Buddy.</h2>
       <ul>
         <li class="polity"><u>Read Our Privacy Policy</u></li>
         <li>&copy; 2019 Run Buddy. Inc.</li>
       </ul>
-    </div>
   </footer>
 </body>
 
