--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body> 
-  <!-- navigation -->
+  <!-- <header> navigation -->
   <header>
       <h1>
         <a href="/">RUN BUDDY</a>
