--- a/index.html
+++ b/index.html
@@ -137,12 +137,10 @@
   </section>
 
   <!-- "reach out" section -->
-  <section>
-    <h2>Reach Out</h2>
+  <section id="reach-out" class="contact">
+    <h2 class="section-title secondary-border">Reach Out</h2>
     <div class="contact-info">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2980.2455670286286!2d-73.9228543842336!3d41.672039679239056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89dd3e96d22e346b%3A0x64e2f3559086a00f!2s173%20Beechwood%20Ave%2C%20Poughkeepsie%2C%20NY%2012601!5e0!3m2!1sen!2sus!4v1655324738688!5m2!1sen!2sus" 
-      width="400" 
-      height="400" 
       style="border:0;" 
       allowfullscreen="" 
       loading="lazy" referrerpolicy="no-referrer-when-downgrade">
