--- a/index.html
+++ b/index.html
@@ -9,32 +9,32 @@
   </head>
 
   <body> 
-    <!-- <header> navigation -->
-    <header>
-        <h1>
-          <a href="/">RUN BUDDY</a>
-        </h1>
-        <nav>
-          <!-- Unordered list element -->
-          <ul>
-            <!-- List item element-->
-            <li>
-              <!-- Anchor element -->
-              <a href="#what-we-do">What We Do</a>
-            </li>
-            <li>
-              <a href="#What-you-do">What You Do</a>
-            </li>
-            <li>
-              <a href="#your-trainers">Your Trainers</a>
-            </li>
-            <li>
-              <a href="#reach-out">Reach Out</a>
-            </li>
-          </ul>
-        </nav>
-    </header>
-
+      <!-- <header> navigation -->
+      <header>
+          <h1>
+            <a href="/">RUN BUDDY</a>
+          </h1>
+          <nav>
+            <!-- Unordered list element -->
+            <ul>
+              <!-- List item element-->
+              <li>
+                <!-- Anchor element -->
+                <a href="#what-we-do">What We Do</a>
+              </li>
+              <li>
+                <a href="#what-you-do">What You Do</a>
+              </li>
+              <li>
+                <a href="#your-trainers">Your Trainers</a>
+              </li>
+              <li>
+                <a href="#reach-out">Reach Out</a>
+              </li>
+            </ul>
+          </nav>
+      </header>
+    
     <!-- hero/jumbotron section -->
     <section class="hero">
       <div class="hero-form">
